--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
@@ -11,9 +12,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "googleapis": "^112.0.0",
-    "nodemailer": "^6.9.1"
-  },
-  "devDependencies": {
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21"
-  }
+  },
+  "devDependencies": {}
 }
